fix: fix alignment issue with sherlock result

--- a/src/components/Sherlock/Sherlock.scss
+++ b/src/components/Sherlock/Sherlock.scss
@@ -32,6 +32,9 @@
   padding: 2px 12px;
   display: flex;
   justify-content: space-between;
+  mark {
+    padding: 0;
+  }
 }
 .sherlock__match-item:hover,
 .sherlock__match-item--selected {
